# alberguecarcalejo

./: .env.sample  .env.spin  .env.spin.example  .gitignore  .replit  Cargo.toml  ENV_VARIABLES.md  PACKAGE_MANAGEMENT.md  README-Testing.md  README.md  SPIN_INSTRUCTIONS.md  Taskfile.yml  api-reviews.js  api-server.js  build-bff.sh  build-server.js  build-wasm.sh  comprehensive-test-summary.md  deploy-build.js  deploy-lambda.sh  dev-replit.js  enzyme-test-summary.md  flake.nix  gateway-proxy.js  index.html  index.js  jest.config.cjs  lambda-code-structure.md  lambda-cors-fix.md  lambda-sam-template.yaml  package-lock.json  package-testcafe.json  package.json  replit.md  replit.nix  replit.nix.bak  run-comprehensive-testcafe.js  run-dev-replit.sh  run-dni-tests.js  run-enzyme-simple.js  (+16 more)
backend-rust/: Cargo.toml  README.md  build-workers.sh  build.sh  wrangler.toml
backend-rust/src/: database_service.rs  lib.rs  ocr_service.rs  rate_limiter.rs
backend-rust/src/spanish-document-ocr/: Cargo.toml  Makefile  README.md  deployment-guide.md
backend-rust/src/spanish-document-ocr/src/: document_classifier.rs  image_processor.rs  main.rs  models.rs  spanish_validator.rs
backend/booking-service/: Cargo.toml
backend/booking-service/src/: lib.rs
backend/booking-service/src/adapters/: console_notification_sender.rs  memory_booking_repository.rs  mod.rs
backend/booking-service/src/application/: create_booking.rs  mod.rs
backend/booking-service/src/domain/entities/: booking.rs  mod.rs
backend/booking-service/src/ports/: booking_repository.rs  mod.rs  notification_sender.rs
backend/booking-service/tests/: booking_service_test.rs
backend/info-on-arrival-service/: Cargo.toml  build.rs
backend/info-on-arrival-service/content/: README.md  eat.json  taxis.json
backend/info-on-arrival-service/src/: lib.rs  main.rs
backend/info-on-arrival-service/src/adapters/scraper/: carrascalejo_scraper.rs  merida_scraper.rs  mod.rs
backend/info-on-arrival-service/src/application/: cards_service.rs  mod.rs
backend/info-on-arrival-service/src/domain/: card.rs
backend/info-on-arrival-service/src/infrastructure/: config.rs  server.rs
backend/info-on-arrival-service/src/ports/: mod.rs  scraper_port.rs  storage_port.rs
backend/info-on-arrival-service/tests/: integration_tests.rs  unit_tests.rs
backend/location-service/: Cargo.toml
backend/notification-service/: Cargo.toml
backend/notification-service/src/: main.rs
backend/notification-service/src/adapters/: mod.rs
backend/notification-service/src/application/: mod.rs  notification_service.rs
backend/notification-service/src/domain/: notification.rs
backend/notification-service/src/infrastructure/: config.rs  server.rs
backend/notification-service/src/ports/: email_port.rs  mod.rs  sms_port.rs  telegram_port.rs
backend/notification-service/tests/: unit_tests.rs
backend/rate-limiter-service/: Cargo.toml
backend/reviews-service/: Cargo.toml
backend/reviews-service/src/: lib.rs
backend/security-service/: Cargo.toml
backend/services/: Cargo.toml
backend/services/country/: Cargo.toml
backend/services/country/src/: lib.rs
backend/services/database/: Cargo.toml
backend/services/database/src/: lib.rs
backend/services/ocr/: Cargo.toml
backend/services/ocr/src/: dni_parser.rs  document_classifier.rs  lib.rs  main.rs  utils.rs
backend/services/security/: Cargo.toml
backend/services/security/src/: lib.rs
backend/services/validation/: Cargo.toml
backend/services/validation/src/: country_api.rs  database_service.rs  lib.rs  models.rs  types.rs  validation.rs
backend/shared/: Cargo.toml
backend/shared/src/: db.rs  error.rs
backend/validation-service/: Cargo.toml
backend/validation-service/src/adapters/: tesseract_ocr.rs
backend/validation-service/src/application/: validation_service.rs
backend/validation-service/src/infrastructure/: mod.rs
backend/validation-service/src/ports/: ocr_client.rs
backend/validation-service/tests/ocr-training/: README.md
bff/registration-bff/: Cargo.toml
bff/registration-bff/src/: lib.rs  orchestrator.rs
gateway/: Caddyfile  Caddyfile.dev  Cargo.toml  README.md  auth-middleware.js  auth0.js  component.js  component.ts  deploy.sh  gateway-proxy.js  package.json  spin-basic.toml  spin.toml  spin_component.js  start-gateway.sh  test-bff.sh  tsconfig.json
gateway/__tests__/: gateway.test.js
gateway/bff/: Cargo.toml
gateway/bff/auth_verify/: Cargo.toml
gateway/bff/auth_verify/src/: lib.rs
gateway/bff/booking_service/: Cargo.toml
gateway/bff/booking_service/src/: lib.rs
gateway/bff/rate_limiter_service/: Cargo.toml
gateway/bff/rate_limiter_service/src/: lib.rs
gateway/bff/security_service/: Cargo.toml
gateway/bff/security_service/src/: lib.rs
gateway/bff/src/: auth_verify.rs  lib.rs  mod.rs
gateway/bff/src/auth_service/: lib.rs
gateway/bff/src/booking_service/: lib.rs
gateway/bff/src/info_on_arrival_service/: lib.rs
gateway/bff/src/location_service/: lib.rs
gateway/bff/src/notification_service/: lib.rs
gateway/bff/src/rate_limiter_service/: lib.rs
gateway/bff/src/reviews_service/: lib.rs
gateway/bff/src/security_service/: lib.rs
gateway/bff/src/validation_service/: lib.rs
gateway/src/: lib.rs  main.rs
gateway/src/handlers/: auth.rs  health.rs  mod.rs  proxy.rs  static_files.rs
gateway/src/utils/: jwt.rs
gateway/tests/: gateway_integration.rs
services/booking-service/: Cargo.toml  index.js
services/booking-service/src/: lib.rs
services/booking-service/src/adapters/: console_notification_sender.rs  memory_booking_repository.rs
services/booking-service/src/ports/: booking_repository.rs  notification_sender.rs
services/location-service/: Cargo.toml
services/validation-service/: Cargo.toml
services/validation-service/src/: lib.rs
services/validation-service/src/adapters/: mod.rs
services/validation-service/src/application/: validation_service.rs
services/validation-service/src/domain/: mod.rs
services/validation-service/src/ports/: mod.rs  ocr_client.rs
services/validation-service/tests/: mod.rs
(+453 files in other folders)
