[workspace]
members = [
    "gateway",
    "services/shared",
    "services/validation-service",
    "services/booking-service"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "wasm-bindgen", "serde"] }
chrono = { version = "0.4", features = ["serde", "wasm-bindgen"] }
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
axum = "0.7"
sqlx = { version = "0.7", features = ["postgres", "chrono", "uuid"] }