[package]
name = "albergue-backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
sha2 = "0.10"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde", "wasm-bindgen"] }
regex = "1.10"
uuid = { version = "1.6", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["macros"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]