[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spin-sdk = "2.0"
url = "2"
urlencoding = "2"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }

[package.metadata.component]
type = "wasm32-wasi"

[package.metadata.component.dependencies]