
[workspace]
members = ["bff"]
resolver = "2"

[workspace.metadata.scripts]
# Build commands
build = "cargo build --workspace --release --target wasm32-wasi"
build-spin = "spin build"

# Development commands  
dev = "spin up --listen 0.0.0.0:3000"
dev-with-caddy = "spin up --listen 127.0.0.1:3000 & cd gateway && caddy run --config Caddyfile"

# Deployment commands
deploy = "cargo build --workspace --release --target wasm32-wasi && spin build && spin deploy"
deploy-local = "cargo build --workspace --release --target wasm32-wasi && spin build && spin up --listen 0.0.0.0:3000"

# Testing and validation
test-gateway = "spin up --listen 127.0.0.1:3000 & sleep 2 && curl http://127.0.0.1:3000/api/ping"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
spin-sdk = "3.0"
anyhow = "1.0"
