[package]
name = "booking-service"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.env]
# Database Configuration
DATABASE_URL = { required = true, description = "PostgreSQL connection string" }
NEON_DATABASE_URL = { required = true, description = "Neon database connection string" }

# Notification Configuration
TWILIO_ACCOUNT_SID = { required = false, description = "Twilio account SID" }
TWILIO_AUTH_TOKEN = { required = false, description = "Twilio auth token" }
SMTP_HOST = { required = false, description = "SMTP server host" }
SMTP_PORT = { required = false, description = "SMTP server port" }
SMTP_USER = { required = false, description = "SMTP username" }
SMTP_PASS = { required = false, description = "SMTP password" }

# Service Configuration
BOOKING_TIMEOUT_HOURS = { default = "2", description = "Booking timeout in hours" }
LOG_LEVEL = { default = "info", description = "Application log level" }

[dependencies]
# Spin SDK for WASM components
spin-sdk = "2.1"
wit-bindgen = "0.25"

# HTTP and web
http = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["postgres", "chrono", "uuid"] }

# Shared dependencies
shared = { path = "../shared" }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID and time
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }