[package]
name = "info-on-arrival-service"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Shared types and utilities
shared = { path = "../shared" }

# WASM support
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# HTTP client and server
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Web scraping
scraper = "0.17"
url = "2.4"

# Database support
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid"] }

# Template and markdown support
handlebars = "4.0"
markdown = "1.0"

# UUID and time
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
wasm-pack = "0.12"