[package]
name = "country-service"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.env]
# Location Service Configuration
GOOGLE_MAPS_API_KEY = { required = false, description = "Google Maps API key" }
MAPBOX_ACCESS_TOKEN = { required = false, description = "Mapbox access token" }

# Country Data Configuration
COUNTRY_DATA_SOURCE = { default = "local", description = "Country data source (local/remote)" }
COUNTRY_API_URL = { required = false, description = "External country API URL" }

# Cache Configuration
CACHE_TTL_SECONDS = { default = "3600", description = "Cache TTL in seconds" }

# Service Configuration
LOG_LEVEL = { default = "info", description = "Application log level" }

[dependencies]
# Spin SDK for WASM components
spin-sdk = "2.1"
wit-bindgen = "0.25"

# HTTP and web
http = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Shared dependencies
shared = { path = "../shared" }

# Error handling
anyhow = "1.0"
thiserror = "1.0"