[package]
name = "rate-limiter-service"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.env]
# Rate Limiting Configuration
RATE_LIMIT_REQUESTS = { default = "100", description = "Requests per minute limit" }
RATE_LIMIT_WINDOW_SECONDS = { default = "60", description = "Rate limit window in seconds" }
RATE_LIMIT_BURST = { default = "20", description = "Burst limit for rate limiting" }

# Redis Configuration (if using external storage)
REDIS_URL = { required = false, description = "Redis connection string for rate limit storage" }

# Service Configuration
LOG_LEVEL = { default = "info", description = "Application log level" }

[dependencies]
# Spin SDK for WASM components
spin-sdk = "2.1"
wit-bindgen = "0.25"

# HTTP and web
http = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Shared dependencies
shared = { path = "../shared" }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }