[package]
name = "security-service"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.env]
# Encryption Configuration
ENCRYPTION_KEY = { required = true, description = "AES-256-GCM encryption key (32 bytes base64)" }
JWT_SECRET = { required = true, description = "JWT signing secret" }

# Security Configuration
TOKEN_EXPIRY_HOURS = { default = "24", description = "JWT token expiry in hours" }
SESSION_TIMEOUT_MINUTES = { default = "60", description = "Session timeout in minutes" }

# Audit Configuration
AUDIT_LOG_ENABLED = { default = "true", description = "Enable audit logging" }
AUDIT_LOG_LEVEL = { default = "info", description = "Audit log level" }

# Service Configuration
LOG_LEVEL = { default = "info", description = "Application log level" }

[dependencies]
# Spin SDK for WASM components
spin-sdk = "2.1"
wit-bindgen = "0.25"

# HTTP and web
http = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Shared dependencies
shared = { path = "../shared" }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Cryptography
aes-gcm = "0.10"
rand = "0.8"