[package]
name = "validation-service"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.env]
# OCR Configuration
TESSERACT_DATA_PATH = { required = false, description = "Path to Tesseract language data" }
OCR_CONFIDENCE_THRESHOLD = { default = "60", description = "Minimum OCR confidence threshold" }

# Document Validation
DOCUMENT_MAX_SIZE_MB = { default = "10", description = "Maximum document size in MB" }
SUPPORTED_FORMATS = { default = "jpg,jpeg,png,pdf", description = "Supported document formats" }

# Security
ENCRYPTION_KEY = { required = true, description = "AES-256-GCM encryption key" }

# Service Configuration
LOG_LEVEL = { default = "info", description = "Application log level" }

[dependencies]
# Spin SDK for WASM components
spin-sdk = "2.1"
wit-bindgen = "0.25"

# HTTP and web
http = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# OCR and document processing
tesseract = "0.13"
image = "0.24"

# Shared dependencies
shared = { path = "../shared" }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Regex for validation
regex = "1.10"