[package]
name = "gateway_bff"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spin-sdk = "2.0"
base64 = "0.21"
jsonwebtoken = "8.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
urlencoding = "2.1"

[package.metadata.component]
type = "wasm32-wasi"