[package]
name = "country-service"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Spin SDK for WASM components
spin-sdk = "2.1"
wit-bindgen = "0.25"

# HTTP and web
http = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Shared dependencies
shared = { path = "../shared" }

# Error handling
anyhow = "1.0"
thiserror = "1.0"