[package]
name = "validation-service"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Spin SDK for WASM components
spin-sdk = "3.0"
wit-bindgen = "0.25"

# HTTP and web
http = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# OCR and document processing
tesseract = "0.13"
image = "0.24"

# Shared dependencies
shared = { path = "../shared" }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Regex for validation
regex = "1.10"