[package]
name = "spanish-document-ocr"
version = "0.1.0"
edition = "2021"

[dependencies]
# Lambda runtime
lambda_runtime = "0.8"
lambda_web = "0.2"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Image processing
image = "0.24"
imageproc = "0.23"
base64 = "0.21"

# OCR
leptess = "0.14"

# Passport MRZ parsing
mrtd = "0.1"

# Utilities
regex = "1.9"
chrono = "0.4"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"  # Optimize for size
strip = true     # Strip symbols