[package]
name = "auth_verify"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spin-sdk = "2.0"
base64 = "0.21"
urlencoding = "2.1"

[package.metadata.component]
type = "wasm32-wasi"