[package]
name = "rate_limiter_service"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spin-sdk = "2.0"
chrono = { version = "0.4", features = ["serde"] }
std-semaphore = "0.1"

[package.metadata.component]
type = "wasm32-wasi"